# Proyecto-desarrollo-e-innovacion

./: .gitignore  CMakeLists.txt  README.md  agents.md  idf_menu.sh  recomendaciones.md  sdkconfig.defaults
agents/: agents.md  descubrimientos.md  recomendaciones.md
backup/pre_baseline_p90_20260706/: README.md  app_config.h.txt  edge_impulse_adapter.cpp.txt
backup/pre_camera_link_20260706/: CMakeLists.txt  README.md  app_config.h  main.c
data/: detector_training_report.json
experiments/esp32cam_camera_test/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
experiments/esp32cam_camera_test/backup/: camera_standalone_test_main.c.txt
experiments/esp32cam_camera_test/main/: CMakeLists.txt  Kconfig.projbuild  camera_node_config.h  camera_node_main.c  camera_service.c  camera_service.h  detector_link.c  detector_link.h  telegram_service.c  telegram_service.h  wifi_service.c  wifi_service.h
include/: acquisition.h  app_config.h  camera_link.h  classifier.h  detector_thresholds.h  edge_impulse_adapter.h  i2c_bus.h  ir_sensor.h  magnetometer.h  main.h  tca9548a.h
src/: acquisition.c  camera_link.c  classifier.c  edge_impulse_adapter.cpp  i2c_bus.c  ir_sensor.c  magnetometer.c  main.c  tca9548a.c
tools/: analyze_magnetometer.py  capture_crossings.py  capture_magnetometer.py  train_crossings.py  train_detector.py
